--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,9 +1,9 @@
 # Site Settings
 title: "Hello. I'm Ashutosh Dave."
-description: "I make iPhone/iPad apps at LiveBird Technologies Pvt. Ltd."
+description: "I make iPhone/iPad apps at Eternus Solutions Pvt. Ltd., Pune"
 url: 'http://ashutoshdave.com' # the base hostname & protocol for your site
 nav: "true"
-footer_text: '© 2017 Ashutosh Dave'
+footer_text: '© 2019 Ashutosh Dave'
 twitter: 'ashutoshdave'
 github: 'ashu'
 medium: 'medium.com/@ashutoshDave'
