--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title: "Hello. I'm Ashutosh Dave."
-description: "I make iPhone/iPad apps at Eternus Solutions Pvt. Ltd., Pune"
+description: "I make iPhone/iPad apps at Eternus Solutions Pvt. Ltd., Pune."
 url: 'http://ashutoshdave.com' # the base hostname & protocol for your site
 nav: "true"
 footer_text: '© 2019 Ashutosh Dave'
